# litfit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: architecture.md  examples.md  streaming_askubuntu.py  streaming_example.py
litfit/: __init__.py  benchmark.py  datasets.py  device.py  dispatch.py  evaluation.py  methods.py  stats.py  triton_kernels.py
notebooks/: quickstart.ipynb
tests/: test_datasets.py  test_device.py  test_dispatch.py  test_evaluation.py  test_methods.py  test_stats.py  test_stats_streaming.py
